refactor: replace Guava ImmutableList.of() with Java List.of() for immutable lists Fixes #1353